Added the these pages so that users can be able to see the observations they have previously saved

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.BirdApp"
         tools:targetApi="31">
         <activity
+            android:name=".ObservationList"
+            android:exported="false" />
+        <activity
             android:name=".observation"
             android:exported="false" />
         <activity
