--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
 
     <application
         android:allowBackup="true"
@@ -15,7 +18,10 @@
         android:theme="@style/Theme.BirdApp"
         tools:targetApi="31">
         <activity
-            android:name=".ObservationList"
+            android:name=".Map"
+            android:exported="false" />
+        <activity
+            android:name=".ObservationListActivity"
             android:exported="false" />
         <activity
             android:name=".observation"
@@ -32,6 +38,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB2_C0FSoREA1eGAgbW5eyFxmGFiRwwJz8" />
     </application>
 
 </manifest>
